[package]
name = "typetag-test"
version = "0.1.0"
authors = ["Will Hakes <info@cwilliamhakes.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.0"
serde = { version = "1.0", features = ["derive", "rc"]}
serde_json = "1.0"
typetag = "0.1.2"
wasm-bindgen = "0.2.40"